[project]
name = "gw.mini.datacenter"
version = "1.0.0"
authors = [
  { name="LiHao", email="lihao@ganweisoft.com" },
]
description = "GWMiniDataCenter的python实现。用于边缘网关的下级，使用mqtt上传实时消息"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://gitee.com/ganweicloud/gw-mini-datacenter-python"
Issues = "https://gitee.com/ganweicloud/gw-mini-datacenter-python"